@@ -98,6 +98,7 @@ import net.sf.rubycollect4j.succ.IntegerSuccessorTest;
 import net.sf.rubycollect4j.succ.LocalDateTimeSuccessorTest;
 import net.sf.rubycollect4j.succ.LongSuccessorTest;
 import net.sf.rubycollect4j.succ.StringSuccessorTest;
+import net.sf.rubycollect4j.succ.TemporalSuccessorTest;
 import net.sf.rubycollect4j.util.ASCII8BitUTFTest;
 import net.sf.rubycollect4j.util.ByteUtilsTest;
 import net.sf.rubycollect4j.util.ComparableEntryTest;
@@ -152,9 +153,9 @@ import net.sf.rubycollect4j.util.TryComparatorTest;
     CharacterSuccessorTest.class, DateSuccessorTest.class,
     DateReverseSuccessorTest.class, DoubleSuccessorTest.class,
     IntegerSuccessorTest.class, LocalDateTimeSuccessorTest.class,
-    LongSuccessorTest.class, StringSuccessorTest.class, ASCII8BitUTFTest.class,
-    ByteUtilsTest.class, ComparableEntryTest.class,
-    LinkedIdentityMap_EntrySetTest.class,
+    LongSuccessorTest.class, StringSuccessorTest.class,
+    TemporalSuccessorTest.class, ASCII8BitUTFTest.class, ByteUtilsTest.class,
+    ComparableEntryTest.class, LinkedIdentityMap_EntrySetTest.class,
     LinkedIdentityMap_IdentityEntryTest.class,
     LinkedIdentityMap_KeySetTest.class, LinkedIdentityMap_ValuesTest.class,
     LinkedIdentityMapTest.class, PeekingIteratorTest.class,
