@@ -342,3 +342,5 @@ Version 2.0.1
 + Add toSet() API to RubySet
 
 * RubyArray#unshift now takes more than 1 element
+
++ Add Ruby.Range.of(Temporal , Temporal end, ChronoUnit chronoUnit)
